--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SeaFoods</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" integrity="sha256-4hqlsNP9KM6+2eA8VUT0kk4RsMRTeS7QGHIM+MZ5sLY=" crossorigin="anonymous" />
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" /> -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.5/css/swiper.min.css" integrity="sha512-uCQmAoax6aJTxC03VlH0uCEtE0iLi83TW1Qh6VezEZ5Y17rTrIE+8irz4H4ehM7Fbfbm8rb30OkxVkuwhXxrRg==" crossorigin="anonymous" />
-  <link rel="stylesheet" href="css/style.css">
-  <!-- <link rel="stylesheet" href="/css/media.css"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.5/css/swiper.min.css"
+    integrity="sha512-uCQmAoax6aJTxC03VlH0uCEtE0iLi83TW1Qh6VezEZ5Y17rTrIE+8irz4H4ehM7Fbfbm8rb30OkxVkuwhXxrRg=="
+    crossorigin="anonymous" />
+  <link rel="stylesheet" href="stylesheets/style.css">
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/39b845f03b.js" crossorigin="anonymous"></script>
@@ -22,10 +24,6 @@
     <div class="container">
       <div class="navb nav-bg">
         <input type="checkbox" id="navb-check" onchange="burger()">
-        <!-- <div class="navb-header">
-          <div class="navb-title">
-          </div>
-        </div> -->
         <div class="navb-btn">
           <label for="navb-check">
             <span></span>
@@ -41,12 +39,12 @@
           <a class="logo" href="index.html"><img src="img/svg/Logo.svg" alt=""></a>
           <a class="nav-link nav-bar-links" href="recipie.html">РЕЦЕПТЫ</a>
           <a class="nav-link nav-bar-links" href="#">О НАС</a>
-          <!-- <button class="btn button-outline  my-2 my-sm-0 mobile-mod" onchange="navbar()" type="submit">Контакты</button> -->
-
         </div>
         <div class="navb-sp-btn">
           <div class="form-inline my-lg-0">
-            <button id="get_mon" class="headerButton modalButton btn button-outline contact-button my-2 my-sm-0 desktop-mod log-in-btn" type="submit" data-popup="popupOne"> <img src="img/svg/log-in.svg" alt=""> </button>
+            <button id="get_mon"
+              class="headerButton modalButton btn button-outline contact-button my-2 my-sm-0 desktop-mod log-in-btn"
+              type="submit" data-popup="popupOne"> <img src="img/svg/log-in.svg" alt=""> </button>
             <section class="modal modalWindow" id="popupOne">
               <section class="modalWrapper firstPopup">
                 <div class="form-wrapper">
@@ -63,7 +61,8 @@
                       <div class="col-md-12">
                         <div class="md-form mb-0">
                           <label for="contact-email" class="">Почта</label>
-                          <input placeholder="daisy.watson@example.com" type="text" id="contact-email" name="email" class="form-control ds_element sf_login_email">
+                          <input placeholder="daisy.watson@example.com" type="text" id="contact-email" name="email"
+                            class="form-control ds_element sf_login_email">
                         </div>
                       </div>
                     </div>
@@ -71,54 +70,58 @@
                       <div class="col-md-12">
                         <div class="md-form mb-0">
                           <label for="contact-name" class="">Пароль</label>
-                          <input placeholder="Минимум 8 симв." type="text" id="contact-name" name="name" class="form-control ds_element sf_login_pass">
+                          <input placeholder="Минимум 8 симв." type="text" id="contact-name" name="name"
+                            class="form-control ds_element sf_login_pass">
                         </div>
                       </div>
                     </div>
                   </form>
                   <div class="log-in-btn">
                     <a href="#" id="log_in_btn" class="log_in sf-log_in">Войти</a>
-                    <p>У вас нет аккаунта? <button class="sign-in-link link-anchor" type="submit" data-sign="signIn">Зарегистрироваться</button></p>
-                    <!-- <p>У вас нет аккаунта? <a href="">Зарегистрироваться</a></p> -->
+                    <p>У вас нет аккаунта? <button class="sign-in-link link-anchor" type="submit"
+                        data-sign="signIn">Зарегистрироваться</button></p>
                   </div>
                 </div>
               </section>
-              <!-- <p>У вас нет аккаунта? <button class="sign-in" type="submit" data-sign="signIn">Зарегистрироваться</button></p> -->
 
               <section class="modalWrapper secondPopup">
                 <div class="form-wrapper">
                   <div class="modal-heading-text">
                     <h2>Регистрация</h2>
-                    
+
                   </div>
                   <form id="wdh_form" class="sign-in-form contact-form">
-                  <div class="row">
+                    <div class="row">
                       <div class="col-md-12">
                         <div class="md-form mb-0">
-                          <label for="contact-email"  class="">Имя</label>
-                          <input placeholder="Иван" type="text" id="contact-name " name="name" class="form-control ds_element sf_user-name">
+                          <label for="contact-email" class="">Имя</label>
+                          <input placeholder="Иван" type="text" id="contact-name " name="name"
+                            class="form-control ds_element sf_user-name">
                         </div>
                       </div>
                     </div>
                     <div class="row">
                       <div class="col-md-12">
                         <div class="md-form mb-0">
-                          <label for="contact-email"  class="">Почта</label>
-                          <input placeholder="daisy.watson@example.com" type="text" id="contact-email " name="email" class="form-control ds_element sf_email">
+                          <label for="contact-email" class="">Почта</label>
+                          <input placeholder="daisy.watson@example.com" type="text" id="contact-email " name="email"
+                            class="form-control ds_element sf_email">
                         </div>
                       </div>
                     </div>
                     <div class="row">
                       <div class="col-md-6">
                         <div class="md-form mb-0">
-                          <label for="contact-name"  class="">Пароль</label>
-                          <input placeholder="Минимум 8 симв." type="text" id="contact-password s" name="password" class="form-control ds_element sf_password">
+                          <label for="contact-name" class="">Пароль</label>
+                          <input placeholder="Минимум 8 симв." type="text" id="contact-password s" name="password"
+                            class="form-control ds_element sf_password">
                         </div>
                       </div>
                       <div class="col-md-6">
                         <div class="md-form mb-0">
                           <label for="contact-name" class="">Телефон</label>
-                          <input placeholder="Минимум 8 симв." type="text" id="contact-replay-password" name="replay-password" class="form-control ds_element">
+                          <input placeholder="Минимум 8 симв." type="text" id="contact-replay-password"
+                            name="replay-password" class="form-control ds_element">
                         </div>
                       </div>
                     </div>
@@ -132,15 +135,9 @@
             </section>
             <section class="modal overlay">
 
-
-
-
-              
-
-
-
           </div>
-          <button class="headerButton modalButton shop-cart-ul" type="submit" data-popup1="popupTwo"> <span class="shop-cart-img"><img src="img/svg/shop-cart.svg" alt=""></span> </button>
+          <button class="headerButton modalButton shop-cart-ul" type="submit" data-popup1="popupTwo"> <span
+              class="shop-cart-img"><img src="img/svg/shop-cart.svg" alt=""></span> </button>
           <section class="modal modalWindow shop-curt" id="popupTwo">
             <section class="modalWrapper">
               <div class="form-wrapper">
@@ -170,7 +167,6 @@
   <section id="first-screen">
     <div class="container">
       <div class="sm-container">
-
 
         <!-- Swiper -->
         <div class="swiper-wrapper__main">
@@ -397,8 +393,12 @@
   </footer>
 
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.5/js/swiper.min.js" integrity="sha512-VHsNaV1C4XbgKSc2O0rZDmkUOhMKPg/rIi8abX9qTaVDzVJnrDGHFnLnCnuPmZ3cNi1nQJm+fzJtBbZU9yRCww==" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+    integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.5/js/swiper.min.js"
+    integrity="sha512-VHsNaV1C4XbgKSc2O0rZDmkUOhMKPg/rIi8abX9qTaVDzVJnrDGHFnLnCnuPmZ3cNi1nQJm+fzJtBbZU9yRCww=="
+    crossorigin="anonymous"></script>
   <script src="js/script.js"></script>
 
 </body>
