--- a/menu.html
+++ b/menu.html
@@ -304,7 +304,7 @@
                                 <h2 class="product-prise">426 <span>грн</span> </h2>
                                 <button class="order-btn sf-product-show-btn">Show</button>
                             </div> -->
-                            <!-- <div class="products-menu__items">
+                            <div class="products-menu__items">
                                 <img src="https://drive.google.com/uc?export=view&id=1bbLSKVLGf_pFSxp7MMKgg_Ll4p-fpAzL" alt="">
                                 <h2 class="product-prise">426 <span>грн</span> </h2>
                                 <button class="order-btn modal-popup">Show</button>
@@ -318,7 +318,7 @@
                                 <img src="https://drive.google.com/uc?export=view&id=1YWxuoH1zK1Cu6bkuowmuxi_qCvDlWX6X" alt="">
                                 <h2 class="product-prise">426 <span>грн</span> </h2>
                                 <button class="order-btn modal-popup sf-product-show-btn">Show</button>
-                            </div> -->
+                            </div>
                         </div>
                     </li>
                     <li>
